MODOAIPMH-586 Removed audit